<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 - All Rights Reserved - Arash Hatami
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/P_Blue"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/popup_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="HardcodedText">


        <ImageView
            android:id="@+id/btnViewResturans"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/restaurants"
            app:srcCompat="@drawable/res"/>

        <ImageView
            android:id="@+id/btnViewFastFoods"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/fastfoods"
            app:srcCompat="@drawable/fast"/>

        <ImageView
            android:id="@+id/btnViewMarkets"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/markets"
            app:srcCompat="@drawable/mark"/>

        <helper.PersianTextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="با استفاده از دسته بندی ها به لیست فروشگاه ها دسترسی پیدا کنید"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textDirection="rtl"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"/>

        <helper.PersianButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?attr/material_drawer_hint_text"
            android:text="بعدی"
            android:textColor="@color/white"
            android:textSize="21sp"/>

    </LinearLayout>
</LinearLayout>