<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 - All Rights Reserved - Arash Hatami
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center"
              android:background="@drawable/inner_background"
              android:orientation="vertical"
              android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <helper.PersianTextView
            android:text="برای بازیابی کلمه عبور ایمیل خود را وارد کنید"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:gravity="center_vertical|center_horizontal|center"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"/>

        <helper.PersianEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_email"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:inputType="textEmailAddress" />

        <helper.PersianEditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:inputType="number|phone" />

        <helper.PersianButton
            android:id="@+id/btnSet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/accent"
            android:text="@string/btn_set"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>