<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 - All Rights Reserved - Arash Hatami
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <com.intrusoft.library.FrissonView
        android:id="@+id/wave_head"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:alphaValue="160"
        app:tideCount="0"
        app:tideHeight="40dp"
        app:tintColor="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/shadow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="10dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/frame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="10dp">

        <View
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_register"/>
    </android.support.v7.widget.CardView>

    <helper.PersianTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shadow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/btn_register"
        android:textColor="#fff"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnRegister"
        android:layout_below="@+id/title"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="جنسیت"
                android:inputType="textPersonName"
                android:textColor="#fff"

                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="سن"
                android:inputType="numberSigned"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="شهر"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="استان"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="کشور"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="@string/hint_phone"
                android:inputType="number|phone"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="شغل"
                android:inputType="text"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

            <helper.PersianEditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/material_drawer_dark_divider"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal|center"
                android:hint="@string/hint_password2"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="@color/gray"/>

        </LinearLayout>
    </ScrollView>

    <helper.PersianButton
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLinkToLoginScreen"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/accent"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <helper.PersianButton
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>

</RelativeLayout>