<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 - All Rights Reserved - Arash Hatami
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <com.intrusoft.library.FrissonView
        android:id="@+id/wave_head"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:alphaValue="160"
        app:tideCount="0"
        app:tideHeight="50dp"
        app:tintColor="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/shadow"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        app:cardBackgroundColor="@color/common_google_signin_btn_text_dark_disabled"
        app:cardCornerRadius="40dp"
        app:cardMaxElevation="10dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/frame"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="40dp"
        app:cardMaxElevation="10dp">

        <View
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_login"/>
    </android.support.v7.widget.CardView>

    <helper.PersianTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/btn_login"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <helper.PersianEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/password"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:background="@color/material_drawer_dark_divider"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|center"
        android:hint="شماره تلفن"
        android:inputType="number|phone"
        android:textColorHint="@color/gray"/>

    <helper.PersianEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/btnLogin"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/material_drawer_dark_divider"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal|center"
        android:hint="رمز عبور"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"/>

    <helper.PersianButton
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLinkToResetPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <helper.PersianButton
        android:id="@+id/btnLinkToResetPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_above="@+id/btnLinkToRegisterScreen"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:text="@string/btn_link_to_resetpassword"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>

    <helper.PersianButton
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>